--- a/Aerok/css/main.css
+++ b/Aerok/css/main.css
@@ -10,18 +10,20 @@
     display: flex;
     gap: 2.82em;
 }
-.visual .ul {
-    width: 100%;
-}
-.visual .ul li {
-    display: flex;
-}
-.visual .ul li .popup_title {
-    padding: 2.35em;
-}
-.visual .ul li .popup_title a {
+.visual .swiper ul {
+    width: 57.30%;
     height: 324px;
 }
-.visual .user {
-    width: 100%;
+.visual .swiper ul li a {
+    display: flex;
+    flex-direction: column;
 }
+
+.visual .user {
+    width: 38.88%;
+    height: 648px;
+    padding: 2.82em;
+    border: 1px solid var(--Border);
+    border-radius: 1.17rem;
+}
+.visual .user 
