--- a/Aerok/css/common.css
+++ b/Aerok/css/common.css
@@ -29,6 +29,7 @@ body, html {
     --hover-color :#F4BD22;
     --pressed-color:#EAB318;
     --bg-color:#fff;
+    --bg-color-2: #F8F8F8;
     /* font*/
     --visual-L: 3.88rem;
     --visual-m: 2.94rem;
