--- a/Aerok/css/common.css
+++ b/Aerok/css/common.css
@@ -45,6 +45,7 @@ body, html {
     --body-L: 1.11rem;
     --body-m-default: 17px;
     --body-s: 0.88rem;
+    --sub: 0.76rem;
 
     /* header */
     --header-h:80px
